<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_message"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_label" />

        <EditText
                android:id="@+id/enter_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_body_label"/>

        <EditText
                android:id="@+id/enter_message_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_body_hint"/>


        <Button
                android:id="@+id/send_sms_with_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/send_with_confirmation" />

        <Button
                android:id="@+id/send_sms_without_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_without_confirmation"/>










    </LinearLayout>

</ScrollView>